--- a/BabyLog_Swift/Base.lproj/Main.storyboard
+++ b/BabyLog_Swift/Base.lproj/Main.storyboard
@@ -82,7 +82,7 @@
             </objects>
             <point key="canvasLocation" x="284.5" y="840.5"/>
         </scene>
-        <!--Log-->
+        <!--日程-->
         <scene sceneID="qvt-FS-p64">
             <objects>
                 <viewController id="rc2-VK-VL2" customClass="LogTabViewController" customModule="BabyLog_Swift" customModuleProvider="target" sceneMemberID="viewController">
@@ -155,7 +155,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Log" image="tabicon_log_on.png" id="pca-CI-4c9"/>
+                    <tabBarItem key="tabBarItem" title="日程" image="TabBar-Zuoxi-Blue.png" id="pca-CI-4c9"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="logView" destination="6Bi-G5-R0W" id="4Ym-hj-PFQ"/>
@@ -278,7 +278,7 @@
             </objects>
             <point key="canvasLocation" x="1288.5" y="-568.5"/>
         </scene>
-        <!--Message-->
+        <!--消息-->
         <scene sceneID="Hjz-zB-unR">
             <objects>
                 <viewController id="z3v-Lb-ZTu" sceneMemberID="viewController">
@@ -302,17 +302,17 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" tag="2" title="Message" image="tabicon_message_on.png" id="5bT-ze-MQg"/>
+                    <tabBarItem key="tabBarItem" tag="2" title="消息" image="tabicon_message_off.png" id="5bT-ze-MQg"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9hE-VL-Q1k" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-209.5" y="840.5"/>
         </scene>
-        <!--Class-->
+        <!--班级主页-->
         <scene sceneID="ERh-FH-HZU">
             <objects>
-                <viewController id="PHP-mY-Vr5" sceneMemberID="viewController">
+                <viewController id="PHP-mY-Vr5" customClass="ClassViewController" customModule="BabyLog_Swift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Spp-4g-7hF"/>
                         <viewControllerLayoutGuide type="bottom" id="U6z-ZI-IqI"/>
@@ -325,16 +325,42 @@
                                 <rect key="frame" x="-7" y="20" width="375" height="44"/>
                                 <items>
                                     <navigationItem title="Class Page" id="ojd-tl-dfC">
-                                        <barButtonItem key="leftBarButtonItem" title="Item" id="AOP-ki-d03"/>
+                                        <barButtonItem key="leftBarButtonItem" image="TabBar-Zuoxi-Blue.png" id="AOP-ki-d03"/>
                                         <barButtonItem key="rightBarButtonItem" title="Item" id="xMT-12-HPN"/>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="TabBar-KId.png" translatesAutoresizingMaskIntoConstraints="NO" id="k4O-1E-SEb">
+                                <rect key="frame" x="54" y="28" width="25" height="25"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="lhW-81-nbg">
+                                <rect key="frame" x="-7" y="64" width="395" height="564"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="CQR-fx-ud2">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="3Ad-6L-GT9">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" tag="1" title="Class" image="tabicon_class_on.png" id="uWY-v0-g5w"/>
+                    <tabBarItem key="tabBarItem" tag="1" title="班级主页" image="tabicon_class_on.png" id="uWY-v0-g5w"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="classCollectionView" destination="lhW-81-nbg" id="jdY-v6-tve"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="weP-IO-7Qv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -342,9 +368,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="TabBar-KId.png" width="22" height="22"/>
+        <image name="TabBar-Zuoxi-Blue.png" width="25" height="25"/>
         <image name="login_bg.png" width="320" height="480"/>
         <image name="tabicon_class_on.png" width="25" height="25"/>
-        <image name="tabicon_log_on.png" width="25" height="25"/>
-        <image name="tabicon_message_on.png" width="23" height="23"/>
+        <image name="tabicon_message_off.png" width="23" height="23"/>
     </resources>
 </document>
