--- a/BabyLog_Swift/Base.lproj/Main.storyboard
+++ b/BabyLog_Swift/Base.lproj/Main.storyboard
@@ -324,7 +324,7 @@
                             <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="556-Ph-Axr">
                                 <rect key="frame" x="-7" y="20" width="375" height="44"/>
                                 <items>
-                                    <navigationItem title="Class Page" id="ojd-tl-dfC">
+                                    <navigationItem title="班级主页" id="ojd-tl-dfC">
                                         <barButtonItem key="leftBarButtonItem" image="TabBar-Zuoxi-Blue.png" id="AOP-ki-d03"/>
                                         <barButtonItem key="rightBarButtonItem" title="Item" id="xMT-12-HPN"/>
                                     </navigationItem>
@@ -334,22 +334,49 @@
                                 <rect key="frame" x="54" y="28" width="25" height="25"/>
                             </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="lhW-81-nbg">
-                                <rect key="frame" x="-7" y="64" width="395" height="564"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="546"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="CQR-fx-ud2">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="100" height="153"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="babyInfoCell" id="3Ad-6L-GT9">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="babyInfoCell" id="3Ad-6L-GT9" customClass="ClassBabyInfoCollectionViewCell" customModule="BabyLog_Swift" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="153"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BTj-8O-8Ym">
+                                                    <rect key="frame" x="16" y="97" width="69" height="30"/>
+                                                    <state key="normal" title="到校时间">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="arriveTimeButtonTapped:" destination="3Ad-6L-GT9" eventType="touchUpInside" id="gfb-Mh-hHW"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wWG-lb-qXd">
+                                                    <rect key="frame" x="16" y="123" width="69" height="30"/>
+                                                    <state key="normal" title="离校时间">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="leaveTimeButtonTapped:" destination="3Ad-6L-GT9" eventType="touchUpInside" id="TZI-0J-nHQ"/>
+                                                    </connections>
+                                                </button>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="KidPhotoBig .png" translatesAutoresizingMaskIntoConstraints="NO" id="e2w-QE-QhK">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                </imageView>
+                                            </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
+                                        <connections>
+                                            <outlet property="babyImageView" destination="e2w-QE-QhK" id="32N-Uc-ukd"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -368,6 +395,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="KidPhotoBig .png" width="75" height="75"/>
         <image name="TabBar-KId.png" width="22" height="22"/>
         <image name="TabBar-Zuoxi-Blue.png" width="25" height="25"/>
         <image name="login_bg.png" width="320" height="480"/>
